[package]
name = "packet-storm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
hashbrown = "0.14.5"
pcap-file = "2.0.0"

[profile.release]
codegen-units = 1
lto = "fat"
debug = true
